# icetracker-srv

./: AUTHORS.md  README.md  pyproject.toml  requirements.txt
Web App Testing Evidence/Web App Requirement 1/: Glacier Monitor Plotter Web Application.url
Web App Testing Evidence/Web App Requirement 2/: Exported CSV Data Sample.json  Exported JSON Data Sample.json
Web App Testing Evidence/Web App Requirement 3/: All Columns - Full Date Range - Rover 2.json  LongLat Only - One Day Range - Rover 3 - JSON.json  Partial Columns - Partial Date Range - Rover 3.json
api/: calculations.py  database.py  models.py  specification.md
app/: __main__.py  routes.py
app/static/: api.js  data.js  graphs.js  style.css
app/templates/: base.html  data.html  graphs.html  index.html
tests/manual/: ingest_cbor.py  ingest_json.py  retrieve_csv.py  retrieve_json.py
tests/unit/: database.py  main.py  schema.sql
